[workspace]
resolver = "2"
members = ["lib", "tools/tna_collect"]


[workspace.metadata.scripts]
check = "cargo check"
build-all = "cargo build"
build-lib = "cargo build --lib"
build-tna = "cargo build --bin tna_collect"
build-example = "cargo build --examples"
release = "cargo build --release"
test = "cargo test"
run-tna_collect = "cargo run --bin tna_collect"
