[package]
name = "convert_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
rinex = { git = "https://mirror.ghproxy.com/https://github.com/cokkiy/rinex",branch="main", optional = true }
ssc = { path = "../ssc", optional = true }
fields_count={path="../fields_count", optional=true}
[features]
gnss = ["rinex"]
gnss-ssc = ["ssc"]
fields-count=["fields_count"]